--- a/notebooks/1.0-qmsum-data-explorer.ipynb
+++ b/notebooks/1.0-qmsum-data-explorer.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "88614be3",
    "metadata": {
     "scrolled": true
@@ -30,41 +30,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: datasets in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (2.13.1)\n",
-      "Requirement already satisfied: packaging in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (22.0)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (6.0)\n",
-      "Requirement already satisfied: xxhash in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (3.2.0)\n",
-      "Requirement already satisfied: multiprocess in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (0.70.14)\n",
-      "Requirement already satisfied: requests>=2.19.0 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (2.28.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (1.24.2)\n",
-      "Requirement already satisfied: pyarrow>=8.0.0 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (12.0.1)\n",
-      "Requirement already satisfied: pandas in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (1.5.2)\n",
-      "Requirement already satisfied: huggingface-hub<1.0.0,>=0.11.0 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (0.12.0)\n",
-      "Requirement already satisfied: fsspec[http]>=2021.11.1 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (2022.11.0)\n",
-      "Requirement already satisfied: aiohttp in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (3.8.4)\n",
-      "Requirement already satisfied: tqdm>=4.62.1 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (4.64.1)\n",
-      "Requirement already satisfied: dill<0.3.7,>=0.3.0 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from datasets) (0.3.6)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from aiohttp->datasets) (1.9.2)\n",
-      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from aiohttp->datasets) (4.0.2)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from aiohttp->datasets) (1.3.1)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from aiohttp->datasets) (6.0.4)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from aiohttp->datasets) (22.1.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from aiohttp->datasets) (1.3.3)\n",
-      "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from aiohttp->datasets) (2.0.4)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from huggingface-hub<1.0.0,>=0.11.0->datasets) (4.4.0)\n",
-      "Requirement already satisfied: filelock in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from huggingface-hub<1.0.0,>=0.11.0->datasets) (3.9.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from requests>=2.19.0->datasets) (2022.12.7)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from requests>=2.19.0->datasets) (1.26.14)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from requests>=2.19.0->datasets) (3.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from pandas->datasets) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from pandas->datasets) (2022.7)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas->datasets) (1.16.0)\n",
-      "Requirement already satisfied: cleantext in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (1.1.4)\n",
-      "Requirement already satisfied: nltk in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from cleantext) (3.7)\n",
-      "Requirement already satisfied: tqdm in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from nltk->cleantext) (4.64.1)\n",
-      "Requirement already satisfied: joblib in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from nltk->cleantext) (1.1.1)\n",
-      "Requirement already satisfied: click in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from nltk->cleantext) (8.0.4)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in /Users/amitmaraj/miniconda/envs/phd/lib/python3.9/site-packages (from nltk->cleantext) (2022.7.9)\n"
+      "Requirement already satisfied: datasets in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (2.14.4)\n",
+      "Requirement already satisfied: xxhash in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (3.3.0)\n",
+      "Requirement already satisfied: packaging in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (21.3)\n",
+      "Requirement already satisfied: pyarrow>=8.0.0 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (13.0.0)\n",
+      "Requirement already satisfied: aiohttp in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (3.8.5)\n",
+      "Requirement already satisfied: tqdm>=4.62.1 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (4.64.1)\n",
+      "Requirement already satisfied: pandas in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (1.5.0)\n",
+      "Requirement already satisfied: requests>=2.19.0 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (2.28.1)\n",
+      "Requirement already satisfied: dill<0.3.8,>=0.3.0 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (0.3.7)\n",
+      "Requirement already satisfied: multiprocess in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (0.70.15)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (6.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0.0,>=0.14.0 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (0.16.4)\n",
+      "Requirement already satisfied: fsspec[http]>=2021.11.1 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (2023.6.0)\n",
+      "Requirement already satisfied: numpy>=1.17 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from datasets) (1.23.2)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from aiohttp->datasets) (1.9.2)\n",
+      "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from aiohttp->datasets) (2.1.1)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from aiohttp->datasets) (6.0.4)\n",
+      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from aiohttp->datasets) (4.0.3)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from aiohttp->datasets) (1.4.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from aiohttp->datasets) (22.1.0)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from aiohttp->datasets) (1.3.1)\n",
+      "Requirement already satisfied: filelock in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from huggingface-hub<1.0.0,>=0.14.0->datasets) (3.8.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from huggingface-hub<1.0.0,>=0.14.0->datasets) (4.3.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from packaging->datasets) (3.0.9)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (2022.9.24)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (1.26.12)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from requests>=2.19.0->datasets) (3.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from pandas->datasets) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from pandas->datasets) (2022.2.1)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from python-dateutil>=2.8.1->pandas->datasets) (1.16.0)\n",
+      "Collecting cleantext\n",
+      "  Downloading cleantext-1.1.4-py3-none-any.whl (4.9 kB)\n",
+      "Requirement already satisfied: nltk in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from cleantext) (3.7)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from nltk->cleantext) (2022.9.13)\n",
+      "Requirement already satisfied: joblib in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from nltk->cleantext) (1.2.0)\n",
+      "Requirement already satisfied: click in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from nltk->cleantext) (8.1.3)\n",
+      "Requirement already satisfied: tqdm in /Users/amitmaraj/miniforge3/envs/phd/lib/python3.8/site-packages (from nltk->cleantext) (4.64.1)\n",
+      "Installing collected packages: cleantext\n",
+      "Successfully installed cleantext-1.1.4\n"
      ]
     }
    ],
@@ -75,26 +79,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "405758d2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset scrolls (/Users/amitmaraj/.cache/huggingface/datasets/tau___scrolls/qmsum/1.0.0/672021d5d8e1edff998a6ea7a5bff35fdfd0ae243e7cf6a8c88a57a04afb46ac)\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46d42d4aabad430aa5d764e666545034",
+       "model_id": "ae999d8cae8747808c1c78e574c5c82d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
+       "Downloading builder script:   0%|          | 0.00/18.5k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d122d0b025934d8ab220a2e9720fbaf7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading readme:   0%|          | 0.00/7.37k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33cb555865f44ed899c200657761a94f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/27.3M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ceea87a1c88d4d04ba1dacd01ee46fdb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61aacf28a6ee44cda69260edaabbc73b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split: 0 examples [00:00, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e4e5ac2158224dc28c5a936af9f929dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split: 0 examples [00:00, ? examples/s]"
       ]
      },
      "metadata": {},
@@ -123,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c3107e98",
    "metadata": {},
    "outputs": [
@@ -284,7 +351,7 @@
        "[1257 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "481d2a98",
    "metadata": {},
    "outputs": [
@@ -305,7 +372,7 @@
        "\"Project Manager introduced that the prototype incorporated fashion trends that people prefer fancy looking products like fruit and vegetable. After That, User Interface presented the product which looked like a banana and was bright yellow except for the blue button. The style was as simple as possible in order to fit the customers' need for simplicity. Also, the product could be curved and used both-handed with advanced chips hidden inside, which seemed quite creative and identical to iPod features. In the end, Industrial Designer commented that the remote control could be smaller in size.\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
